Fix com.percussion.error package conflict on PSExceptionUtils.  general warning clean up.